2006-08-28 [paul]	2.4.0cvs102

	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
		require autoconf 2.60, enabling building
		with gettext 0.15 (gettext 0.14.x build still
		possible). Replace Makefiles with versions
		from gettext 0.15.
		Remove configure options --with-localedir and
		--with-mandir. The options that are provided
		directly by autoconf 2.60 can be used instead:
		--mandir --localedir

2006-08-27 [colin]	2.4.0cvs101

	* src/plugins/bogofilter/Makefile.am
		Fix make dist (no README)

2006-08-27 [colin]	2.4.0cvs100

	* src/folder.c
		Don't use F_UNKNOWN folders for any default
		outbox/trash/etc
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter.h
	* src/plugins/bogofilter/bogofilter_gtk.c
		Add an option to specify the path to bogofilter
		Use single-quotes to be able to learn in folders
		with spaces in their names
		Verify learning status

2006-08-27 [colin]	2.4.0cvs99

	* manual/faq.xml
	* manual/plugins.xml
		Document Bogofilter plugin

2006-08-27 [colin]	2.4.0cvs98

	* src/compose.c
	* src/messageview.c
	* src/procmsg.c
	* src/procmsg.h
		When possible, copy the queued mail to sent folder
		instead of re-adding. Much faster on IMAP.

2006-08-27 [colin]	2.4.0cvs97

	* src/msgcache.c
		Disable mmaped caches - huge metadata loss
		here after a power failure.
	* src/summaryview.c
		Add quicksearch timing
	* src/common/plugin.c
	* src/common/plugin.h
		Implement an interface to tell what plugins
		provide. Prevent loading of similar plugins.
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/demo/demo.c
	* src/plugins/dillo_viewer/dillo_viewer.c
	* src/plugins/pgpcore/plugin.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/trayicon/trayicon.c
		Implement plugin_provides()

2006-08-27 [colin]	2.4.0cvs96

	* configure.ac
	* src/plugins/Makefile.am
	* src/plugins/bogofilter/.cvsignore
	* src/plugins/bogofilter/Makefile.am